# Viewnior

./: configure.ac
src/: Makefile.am  vnr-crop.c  vnr-crop.h  vnr-prefs.c  vnr-prefs.h  vnr-properties-dialog.c  vnr-properties-dialog.h  vnr-window.c
